--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
     <div id="vertical">
     <script src="/js/nygovGen.js"></script>
     </div>
-  <img src="https://czaplicki-j.github.io/PowerBallLogo2.png" alt="PowerBall" width="1800" class="center">
+  <img src="https://czaplicki-j.github.io/PowerBallLogo2.png" alt="PowerBall" width="<script src="/js/returnWidth.js"></script>" class="center">
     <div id="numbers">
 <script src="/js/numGenerator.js"></script>
         </div>
         <br>
-          <script src="/js/returnWidth.js"></script> 
     <div id="dash">
 <script src="/js/dashGenerator.js"></script>
         </div>
