--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <link href="https://fonts.googleapis.com/css?family=Vast+Shadow&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="stylesheet" type="text/css" href="/css/dropdown.css">
-    <link rel="shortcut icon" href="logo12.ico" />
+    <link rel="shortcut icon" href="/pictures/logo12.ico" />
   </head>
 <body>
     <div id="vertical">
     <script src="/js/nygovGen.js"></script>
     </div>
-  <img src="https://czaplicki-j.github.io/PowerBallLogo2.png" alt="PowerBall" class="center">
+  <img src="/pictures/PowerBallLogo2.png" alt="PowerBall" class="center">
     <div id="numbers">
 <script src="/js/numGenerator.js"></script>
         </div>
