--- a/page-2.html
+++ b/page-2.html
@@ -1,28 +1,29 @@
 <!Doctype html>
 <html>
+<head>
+  <title>page2</title>
+     <link href="https://fonts.googleapis.com/css?family=Vast+Shadow&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="/css/dropdown.css">
+  <link rel="stylesheet" type="text/css" href="/css/page2.css">
+</head>
 <body>
      <div id="vertical">
-    www.nylottery.ny.gov   www.nylottery.ny.gov www.nylottery.ny.gov www.nylottery.ny.gov 
+    www.nylottery.ny.gov   www.nylottery.ny.gov www.nylottery.ny.gov www.nylottery.ny.gov
     </div>
-  <head>
-    <title>page2</title>
-       <link href="https://fonts.googleapis.com/css?family=Vast+Shadow&display=swap" rel="stylesheet"> 
-       <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/css/dropdown.css">
-    <link rel="stylesheet" type="text/css" href="/css/page2.css">
-  </head> 
+<img src="/pictures/PowerBallLogo2.png" alt="PowerBall" class="center">
   <div class="dropdown">
       <button class="dropbtn">Menu</button>
       <div class="dropdown-content">
         <a href="index.html">Home</a>
-        <a href="page-2.html">Rules</a>          
+        <a href="page-2.html">Rules</a>
       </div>
     </div>
 <h1>Rules</h1>
 <p>these are some rules</p>
 
 <h2><font color="red">Probabilty Formula</font></h2>
-  <p>  
+  <p>
   <div class="frac">
       Prob(E)<span>|E|</span>
       <span class="symbol">/</span>
