--- a/page-2.html
+++ b/page-2.html
@@ -23,12 +23,10 @@
 <p>these are some rules</p>
 
 <h2><font color="red">Probabilty Formula</font></h2>
-  <p>
   <div class="frac">
-      Prob(E)<span>|E|</span>
+  <p>Prob(E)<span>|E|</span>
       <span class="symbol">/</span>
-      <span class="bottom">|S|</span>
-  </p>
+      <span class="bottom">|S|</span> </p>
     </div>
 <h2><font color="red">Elementary Rules: combine the probabilities for disjoint events</font></h2>
   <h3>The Elementary Addition Rule</h3>
