--- a/page-2.html
+++ b/page-2.html
@@ -23,11 +23,9 @@
 <p>these are some rules</p>
 
 <h2><font color="red">Probabilty Formula</font></h2>
-  <div class="frac">
-  <p>Prob(E)<span>|E|</span>
-      <span class="symbol">/</span>
-      <span class="bottom">|S|</span> </p>
-    </div>
+<p>
+  Prob(E)<span class="fraction">|E|/|S|</span>
+</p>
 <h2><font color="red">Elementary Rules: combine the probabilities for disjoint events</font></h2>
   <h3>The Elementary Addition Rule</h3>
   <h3>The Elementary Multiplication Rule</h3>
