--- a/page-2.html
+++ b/page-2.html
@@ -24,7 +24,7 @@
 
 <h2><font color="red">Probabilty Formula</font></h2>
 <p>
-  Prob(E)<span class="fraction">|E|/|S|</span>
+  Prob(E)<span class="fraction">1/2</span>
 </p>
 <h2><font color="red">Elementary Rules: combine the probabilities for disjoint events</font></h2>
   <h3>The Elementary Addition Rule</h3>
