--- a/page-2.html
+++ b/page-2.html
@@ -27,7 +27,7 @@
 <h2><font color="red">Elementary Rules: combine the probabilities for disjoint events</font></h2>
   <h3>The Elementary Addition Rule</h3>
   <h3>The Elementary Multiplication Rule</h3>
-    <p>E<sub>1</sub> ∩ E<sub>2</sub> = ∅</p>
+    <p>Prob(E<sub>1</sub> ∩ E<sub>2</sub> = Prob(E<sub>1</sub>) * Prob(E<sub>2</sub>)</p>
 <h2><font color="red">General Rules</font></h2>
   <h3>The General Addition Rule</h3>
   <h3>The General Multiplication Rule</h3>
