--- a/page-2.html
+++ b/page-2.html
@@ -26,7 +26,7 @@
 <p>Prob(E)&nbsp;<span class="frac"><sup>|E|</sup><span>&frasl;</span><sub>|S|</sub></span>.</p>
 <h2><font color="red">Elementary Rules: combine the probabilities for disjoint events</font></h2>
   <h3>The Elementary Addition Rule</h3>
-    <p>Prob(E<sub>1</sub> ∪ E<sub>2</sub> = Prob(E<sub>1</sub>) + Prob(E<sub>2</sub>)</p>
+    <p>Prob(E<sub>1</sub> ∪ E<sub>2</sub>) = Prob(E<sub>1</sub>) + Prob(E<sub>2</sub>)</p>
   <h3>The Elementary Multiplication Rule</h3>
     <p>Prob(E<sub>1</sub> ∩ E<sub>2</sub> = Prob(E<sub>1</sub>) * Prob(E<sub>2</sub>)</p>
 <h2><font color="red">General Rules</font></h2>
