--- a/page-2.html
+++ b/page-2.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html>
 <head>
-  <title>page2</title>
+  <title>Equations</title>
      <link href="https://fonts.googleapis.com/css?family=Vast+Shadow&display=swap" rel="stylesheet">
      <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/css/dropdown.css">
@@ -17,6 +17,7 @@
       <div class="dropdown-content">
         <a href="index.html">Home</a>
         <a href="page-2.html">Rules</a>
+        <a href="page3.html">PowerBall</a>
       </div>
     </div>
 <h1>Rules</h1>
