--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <div class="dropdown-content">
           <a href="index.html">Home</a>
           <a href="page-2.html">Rules</a>
+          <a href="page3.html">PowerBall</a>
         </div>
     </div>
     <p>POWER PLAY</p>
