--- a/page3.html
+++ b/page3.html
@@ -1,4 +1,4 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <<head>
   <<title>How PowerBall works</title>
@@ -13,12 +13,13 @@
 </div>
 <img src="/pictures/PowerBallLogo2.png" alt="Powerball" class="center">
 <div class="dropdown">
-  <button class="dorpbtn">Menu</button>
+  <button class="dropbtn">Menu</button>
   <div class="dropdown-content">
     <a href="index.html">Home</a>
     <a href="page-2.html">Rules</a>
     <a href="page3.html">PowerBall</a>
   </div>
 </div>
+<h1>How does Powerball Work?</h1>
 </body>
 </html>
