--- a/page3.html
+++ b/page3.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<<head>
+<head>
   <<title>How PowerBall works</title>
   <link href="https://fonts.googleapis.com/css?family=Vast+Shadow&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow&display=swap" rel="stylesheet">
