--- a/page3.html
+++ b/page3.html
@@ -12,6 +12,13 @@
       www.nylottery.ny.gov   www.nylottery.ny.gov www.nylottery.ny.gov www.nylottery.ny.gov
 </div>
 <img src="/pictures/PowerBallLogo2.png" alt="Powerball" class="center">
+<div id="numbers">
+<script src="/js/numGenerator.js"></script>
+    </div>
+    <br>
+<div id="dash">
+<script src="/js/dashGenerator.js"></script>
+    </div>
 <div class="dropdown">
   <button class="dropbtn">Menu</button>
   <div class="dropdown-content">
@@ -21,5 +28,21 @@
   </div>
 </div>
 <h1>How does Powerball Work?</h1>
+<h2>Quick Facts</h2>
+<p>The Jackpot starts at $40 Million </p>
+<p>If the Jackpot is not awarded, it rises by at least $10 million</p>
+<p>PowerBall consists of 5 white balls and one red ball called the powerball. The jackpot is awarded when all 6 numbers are matched. Even if at only one number is matched, a prize is still awarded. The order of the numbers do not matter. A 67 15 66 20 8 5 is equivalent to a 67 8 20 66 15 5 </p>
+<p>The PowerBall is not influenced by how many tickets are bought. The probaiblity is fixed as there are 69 white balls and 26 red balls. </p>
+<p>For an extra dollar, Power Play may be added. This uses a randomly generated number from 2-5 and acts as a multiplier to the payout aside from the jackpot. If the jackpot is worth less than $150 million, a 10x multiplayer is used.</p>
+<p>The prizes are: </p>
+Powerball only: $4
+1 White Ball + PowerBall: $4
+2 White Balls + PowerBall: $7
+3 White Balls: $7
+3 White Balls + PowerBall: $100
+4 White Balls: $100
+4 White Balls + PowerBall: $50,000
+5 White Balls: $1,000,000
+5 White Balls + PowerBall: Jackpot
 </body>
 </html>
