--- a/page-2.html
+++ b/page-2.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" type="text/css" href="/css/page2.css">
 </head>
 <body>
-     <div id="vertical">
-    www.nylottery.ny.gov   www.nylottery.ny.gov www.nylottery.ny.gov www.nylottery.ny.gov
-    </div>
+  <div id="vertical">
+  <script src="/js/nygovGen.js"></script>
+  </div>
 <img src="/pictures/PowerBallLogo2.png" alt="PowerBall" class="center">
   <div class="dropdown">
       <button class="dropbtn">Menu</button>
