--- a/page3.html
+++ b/page3.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" type="text/css" href="/css/page3.css">
 </head>
 <body>
-<div id="vertical">
-      www.nylottery.ny.gov   www.nylottery.ny.gov www.nylottery.ny.gov www.nylottery.ny.gov
-</div>
+  <div id="vertical">
+  <script src="/js/nygovGen.js"></script>
+  </div>
 <img src="/pictures/PowerBallLogo2.png" alt="Powerball" class="center">
 <div id="numbers">
 <script src="/js/numGenerator.js"></script>
