--- a/page3.html
+++ b/page3.html
@@ -27,7 +27,7 @@
     <a href="page3.html">PowerBall</a>
   </div>
 </div>
-<h1>How does Powerball Work?</h1>
+<h1>How Does Powerball Work?</h1>
 <h2>Quick Facts</h2>
 <p>The Jackpot starts at $40 Million </p>
 <p>If the Jackpot is not awarded, it rises by at least $10 million</p>
