--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
           <a href="page3.html">PowerBall</a>
         </div>
     </div>
-    <p>POWER PLAY</p>
+    <p>POWER PLAY:</p>
     <div id="powerNumbers">
+    <script src="/js/powerPlayGen.js"></script>
         A. <script src="/js/powerNumGenerator.js"></script>
         <br>
     </div>
