--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
           <a href="page3.html">PowerBall</a>
         </div>
     </div>
-    <p>POWER PLAY:</p>
+    <p>POWER PLAY: <script src="/js/powerPlayGen.js"></script></p>
     <div id="powerNumbers">
-    <script src="/js/powerPlayGen.js"></script>
         A. <script src="/js/powerNumGenerator.js"></script>
         <br>
     </div>
