--- a/page-2.html
+++ b/page-2.html
@@ -12,6 +12,13 @@
   <script src="/js/nygovGen.js"></script>
   </div>
 <img src="/pictures/PowerBallLogo2.png" alt="PowerBall" class="center">
+<div id="numbers">
+<script src="/js/numGenerator.js"></script>
+    </div>
+    <br>
+<div id="dash">
+<script src="/js/dashGenerator.js"></script>
+    </div>
   <div class="dropdown">
       <button class="dropbtn">Menu</button>
       <div class="dropdown-content">
