--- a/page3.html
+++ b/page3.html
@@ -29,9 +29,10 @@
 </div>
 <h1>How Does Powerball Work?</h1>
 <h2>Quick Facts</h2>
-<p>The Jackpot starts at $40 Million </p>
-<p>If the Jackpot is not awarded, it rises by at least $10 million</p>
-<p>PowerBall consists of 5 white balls and one red ball called the powerball. The jackpot is awarded when all 6 numbers are matched. Even if at only one number is matched, a prize is still awarded. The order of the numbers do not matter. A 67 15 66 20 8 5 is equivalent to a 67 8 20 66 15 5 </p>
+<p>A PowerBall ticket costs $2 and $3 with the Power Play option.</p>
+<p>The Jackpot starts at $40 Million. </p>
+<p>If the Jackpot is not awarded, it rises by at least $10 million.</p>
+<p>PowerBall consists of 5 white balls and one red ball called the powerball. The jackpot is awarded when all 6 numbers are matched. Even if at only one number is matched, a prize is still awarded. The order of the numbers do not matter. A 67 15 66 20 8 5 is equivalent to a 67 8 20 66 15 5.</p>
 <p>The PowerBall is not influenced by how many tickets are bought. The probaiblity is fixed as there are 69 white balls and 26 red balls. </p>
 <p>For an extra dollar, Power Play may be added. This uses a randomly generated number from 2-5 and acts as a multiplier to the payout aside from the jackpot. If the jackpot is worth less than $150 million, a 10x multiplier is used.</p>
 <p>The prizes are: </p>
