--- a/page3.html
+++ b/page3.html
@@ -30,6 +30,7 @@
 <h1>How Does Powerball Work?</h1>
 <h2>Quick Facts</h2>
 <p>A PowerBall ticket costs $2 and $3 with the Power Play option.</p>
+<p>Drawings are held on Wednesdays and Saturdays</p>
 <p>The Jackpot starts at $40 Million. </p>
 <p>If the Jackpot is not awarded, it rises by at least $10 million.</p>
 <p>PowerBall consists of 5 white balls and one red ball called the powerball. The jackpot is awarded when all 6 numbers are matched. Even if at only one number is matched, a prize is still awarded. The order of the numbers do not matter. A 67 15 66 20 8 5 is equivalent to a 67 8 20 66 15 5.</p>
