--- a/page3.html
+++ b/page3.html
@@ -33,7 +33,7 @@
 <p>Drawings are held on Wednesdays and Saturdays</p>
 <p>The Jackpot starts at $40 Million. </p>
 <p>If the Jackpot is not awarded, it rises by at least $10 million.</p>
-<p>PowerBall consists of 5 white balls and one red ball called the powerball. The jackpot is awarded when all 6 numbers are matched. Even if at only one number is matched, a prize is still awarded. The order of the numbers do not matter. A 67 15 66 20 8 5 is equivalent to a 67 8 20 66 15 5.</p>
+<p>PowerBall consists of 5 white balls and one red ball called the powerball. The jackpot is awarded when all 6 numbers are matched. Even if only one number is matched, a prize is still awarded. The order of the numbers do not matter. A 67 15 66 20 8 5 is equivalent to a 67 8 20 66 15 5.</p>
 <p>The PowerBall is not influenced by how many tickets are bought. The probaiblity is fixed as there are 69 white balls and 26 red balls. </p>
 <p>For an extra dollar, Power Play may be added. This uses a randomly generated number from 2-5 and acts as a multiplier to the payout aside from the jackpot. If the jackpot is worth less than $150 million, a 10x multiplier is used.</p>
 <p>The prizes are: </p>
@@ -46,5 +46,7 @@
 <p>4 White Balls + PowerBall: $50,000</p>
 <p>5 White Balls: $1,000,000</p>
 <p>5 White Balls + PowerBall: Jackpot</p>
+<h1>Odds of Winning</h1>
+<p>Probability of getting a single PowerBall number correct: 1/26 = .0384 = 38.4%</p>
 </body>
 </html>
