--- a/page3.html
+++ b/page3.html
@@ -37,7 +37,7 @@
 <p>The PowerBall is not influenced by how many tickets are bought. The probaiblity is fixed as there are 69 white balls and 26 red balls. </p>
 <p>For an extra dollar, Power Play may be added. This uses a randomly generated number from 2-5 and acts as a multiplier to the payout aside from the jackpot. If the jackpot is worth less than $150 million, a 10x multiplier is used.</p>
 <h1>Prizes</h1>
-<p>Powerball only: $4</p>
+<p>PowerBall only: $4</p>
 <p>1 White Ball + PowerBall: $4</p>
 <p>2 White Balls + PowerBall: $7</p>
 <p>3 White Balls: $7</p>
