--- a/page3.html
+++ b/page3.html
@@ -46,6 +46,14 @@
 <p>5 White Balls: $1,000,000</p>
 <p>5 White Balls + PowerBall: Jackpot</p>
 <h1>Odds of Winning</h1>
-<p>Probability of getting a single PowerBall number correct: 1/26 = .0384 = 38.4%</p>
+<h2>There are 11,238,513 Possible Combinations Of 5 White Balls</h2>
+<p>Multiplied by 26 Red Ball combinations, there are 292,201,338 possible combinations</p>
+<p>Probability of getting a single PowerBall number correct: 1/26 = .0384 = 38.4% http://www.durangobill.com/PowerballOdds.html</p>
+<h1>Guaranteed Jackpot?</h1>
+<p>Using $2 tickets, $584,402,676 is required to buy each combination</p>
+<p>Highest PowerBall Jackpot: $1.586 billion</p>
+<h1>Is It Worth It?</h1>
+<p>Lottery pools may be used</p>
+<p>Viable only when large amount of tickets are bought</p>
 </body>
 </html>
