--- a/page3.html
+++ b/page3.html
@@ -47,7 +47,7 @@
 <p>5 White Balls + PowerBall: Jackpot</p>
 <h1>Odds of Winning</h1>
 <h2>There are 11,238,513 Possible Combinations Of 5 White Balls</h2>
-<h2>Multiplied by 26 Red Ball combinations, there are 292,201,338 possible combinations</h2>
+<h2>Multiplied by 26 Red Ball combinations, there are 292,201,338 possible combinations!</h2>
 <p>Probability of getting a single PowerBall number correct: 1/26 = .0384 = 38.4%</p>
 http://www.durangobill.com/PowerballOdds.html
 https://www.businessinsider.com/powerball-lottery-ticket-combinations-2016-1
