--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="/pictures/logo12.ico" />
   </head>
 <body>
+  <div id="background">
     <div id="vertical">
     <script src="/js/nygovGen.js"></script>
     </div>
@@ -32,12 +33,11 @@
         A. <script src="/js/powerNumGenerator.js"></script>
         <br>
     </div>
-      </div>
   <p><font color="red">What even is Probability?</font></p>
   *Add Definition*
      <div id="dash">
     <script src="/js/dashGenerator.js"></script>
     </div>
+  </div>
 </body>
-</div>
 </html>
