--- a/page-2.html
+++ b/page-2.html
@@ -11,6 +11,7 @@
   <div id="vertical">
   <script src="/js/nygovGen.js"></script>
   </div>
+  <div id="background">
 <img src="/pictures/PowerBallLogo2.png" alt="PowerBall" class="center">
 <div id="numbers">
 <script src="/js/numGenerator.js"></script>
@@ -43,5 +44,6 @@
 <h2><font color="red">Complement</font></h2>
 <h2><font color="red">Binomial Distribution</font></h2>
 <h2><font color="red">Binary Search</font></h2>
+</div>
 </body>
 </html>
