--- a/page3.html
+++ b/page3.html
@@ -11,6 +11,7 @@
   <div id="vertical">
   <script src="/js/nygovGen.js"></script>
   </div>
+  <div id="background">
 <img src="/pictures/PowerBallLogo2.png" alt="Powerball" class="center">
 <div id="numbers">
 <script src="/js/numGenerator.js"></script>
@@ -57,5 +58,6 @@ https://www.businessinsider.com/powerball-lottery-ticket-combinations-2016-1
 <h1>Is It Worth It?</h1>
 <p>Lottery pools may be used</p>
 <p>Viable only when large amount of tickets are bought</p>
+</div>
 </body>
 </html>
