--- a/page3.html
+++ b/page3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <<title>How PowerBall works</title>
+  <title>How PowerBall works</title>
   <link href="https://fonts.googleapis.com/css?family=Vast+Shadow&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/css/dropdown.css">
@@ -11,7 +11,6 @@
   <div id="vertical">
   <script src="/js/nygovGen.js"></script>
   </div>
-
 <img src="/pictures/PowerBallLogo2.png" alt="Powerball" class="center">
   <div id="background">
 <div id="numbers">
