--- a/page-2.html
+++ b/page-2.html
@@ -31,7 +31,7 @@
     </div>
 <h1>Rules</h1>
 <h2><font color="red">Probabilty Formula</font></h2>
-<p>Prob(E)&nbsp;<span class="frac"><sup>|E|</sup><span>&frasl;</span><sub>|S|</sub></span>.</p>
+<p>Prob(E)&nbsp;<span class="frac"><sup>|E|</sup><span>&frasl;</span><sub>|S|</sub></span></p>
 <h2><font color="red">Elementary Rules</font></h2>
   <h3>The Elementary Addition Rule</h3>
     <p>Prob(E<sub>1</sub> ∪ E<sub>2</sub>) = Prob(E<sub>1</sub>) + Prob(E<sub>2</sub>)</p>
@@ -41,6 +41,8 @@
   <h3>The General Addition Rule</h3>
     <p>Prob(E<sub>1</sub> ∪ E<sub>2</sub>) = Prob(E<sub>1</sub>) + Prob(E<sub>2</sub>) - Prob(E<sub>1</sub> ∩ E<sub>2</sub>)</p>
   <h3>The General Multiplication Rule</h3>
+    <p>Prob(E<sub>1</sub> and E<sub>2</sub>) = Prob(E<sub>1</sub> * Prob(E<sub>2</sub>|E<sub>1</sub>)
+                                             = Prob(E<sub>2</sub>) * Prob(E<sub>1</sub>|E<sub>2</sub>)</p>
   <p>Used when...</p>
 <h2><font color="red">Complement</font></h2>
 <h2><font color="red">Binomial Distribution</font></h2>
