--- a/page-2.html
+++ b/page-2.html
@@ -32,18 +32,24 @@
 <h1>Rules</h1>
 <h2><font color="red">Probabilty Formula</font></h2>
 <p>Prob(E)&nbsp;<span class="frac"><sup>|E|</sup><span>&frasl;</span><sub>|S|</sub></span></p>
+<p>|E| = Total number of favorable outcomes</p>
+<p>|S| = Total number of Outcomes or Sample space</p>
 <h2><font color="red">Elementary Rules</font></h2>
   <h3>The Elementary Addition Rule</h3>
+    <p>Given E<sub>1</sub> and E<sub>2</sub> are disjoint:</p>
     <p>Prob(E<sub>1</sub> ∪ E<sub>2</sub>) = Prob(E<sub>1</sub>) + Prob(E<sub>2</sub>)</p>
   <h3>The Elementary Multiplication Rule</h3>
+    <p>Given two independent events:</p>
     <p>Prob(E<sub>1</sub> ∩ E<sub>2</sub> = Prob(E<sub>1</sub>) * Prob(E<sub>2</sub>)</p>
 <h2><font color="red">General Rules</font></h2>
   <h3>The General Addition Rule</h3>
     <p>Prob(E<sub>1</sub> ∪ E<sub>2</sub>) = Prob(E<sub>1</sub>) + Prob(E<sub>2</sub>) - Prob(E<sub>1</sub> ∩ E<sub>2</sub>)</p>
+    <p>If the events are disjoint, then E<sub>1</sub> ∩ E<sub>2</sub> = ∅</p>
+    <p>Which also means that the general addition rule will reduce to the elementary addition rule for probability.</p>
   <h3>The General Multiplication Rule</h3>
     <p>Prob(E<sub>1</sub> and E<sub>2</sub>) = Prob(E<sub>1</sub> * Prob(E<sub>2</sub>|E<sub>1</sub>)
                                              = Prob(E<sub>2</sub>) * Prob(E<sub>1</sub>|E<sub>2</sub>)</p>
-  <p>Used when...</p>
+  <p>Used when the events are not independent.</p>
 <h2><font color="red">Complement</font></h2>
 <h2><font color="red">Binomial Distribution</font></h2>
 <h2><font color="red">Binary Search</font></h2>
