--- a/page-2.html
+++ b/page-2.html
@@ -47,8 +47,8 @@
     <p>If the events are disjoint, then E<sub>1</sub> ∩ E<sub>2</sub> = ∅</p>
     <p>Which also means that the general addition rule will reduce to the elementary addition rule for probability.</p>
   <h3>The General Multiplication Rule</h3>
-    <p>Prob(E<sub>1</sub> and E<sub>2</sub>) = Prob(E<sub>1</sub> * Prob(E<sub>2</sub>|E<sub>1</sub>)
-                                             = Prob(E<sub>2</sub>) * Prob(E<sub>1</sub>|E<sub>2</sub>)</p>
+    <p>Prob(E<sub>1</sub> and E<sub>2</sub>) = Prob(E<sub>1</sub>) * Prob(E<sub>2</sub>|E<sub>1</sub>)
+    <p>                  = Prob(E<sub>2</sub>) * Prob(E<sub>1</sub>|E<sub>2</sub>)</p>
   <p>Used when the events are not independent.</p>
 <h2><font color="red">Complement</font></h2>
 <h2><font color="red">Binomial Distribution</font></h2>
