--- a/page3.html
+++ b/page3.html
@@ -25,6 +25,7 @@
   <div class="dropdown-content">
     <a href="index.html">Home</a>
     <a href="page-2.html">Rules</a>
+    <a href="examples.html">Examples</a>
     <a href="page3.html">PowerBall</a>
   </div>
 </div>
