--- a/examples.html
+++ b/examples.html
@@ -30,5 +30,9 @@
         <a href="page3.html">PowerBall</a>
       </div>
     </div>
-<h1>this is a test for examples page.</h1>
+<h1>Examples:</h1>
+<img src="\pictures\Image 12-4-19 at 3.04 PM.jpg" alt="PowerBall" class="center">
+    <div id="background">
+    <div id="numbers">
+</body>
 </html>
