--- a/examples.html
+++ b/examples.html
@@ -31,7 +31,7 @@
       </div>
     </div>
 <h1>Examples:</h1>
-<img src="\pictures\Image 12-4-19 at 3.04 PM.jpg" alt="PowerBall" class="center">
+<img src="\pictures\Image 12-4-19 at 3.04 PM.jpg" alt="Example1" class="examples">
     <div id="background">
     <div id="numbers">
 </body>
