--- a/examples.html
+++ b/examples.html
@@ -34,5 +34,8 @@
 <img src="\pictures\Image 12-4-19 at 3.04 PM.jpg" alt="Example1" class="examples">
     <div id="background">
     <div id="numbers">
+<img src="\pictures\Image 12-4-19 at 3.06 PM.jpg" alt="Example1" class="examples">
+    <div id="background">
+    <div id="numbers">
 </body>
 </html>
