--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
         A. <script src="/js/powerNumGenerator.js"></script>
         <br>
     </div>
-  <p><font color="red">What even is Probability?</font></p>
-  *Add Definition*
+  <h1>What is Probability?</h1>
+<p>The likelihood of an event happening.</p>
+<p>Prob(E)&nbsp;<span class="frac"><sup>|E|</sup><span>&frasl;</span><sub>|S|</sub></span></p>
      <div id="dash">
     <script src="/js/dashGenerator.js"></script>
     </div>
