--- a/page3.html
+++ b/page3.html
@@ -50,15 +50,22 @@
 <h1>Odds of Winning</h1>
 <h2>There are 11,238,513 Possible Combinations Of 5 White Balls</h2>
 <h2>Multiplied by 26 Red Ball combinations, there are 292,201,338 possible combinations!</h2>
-<p>Probability of getting a single PowerBall number correct: 1/26 = .0384 = 38.4%</p>
-http://www.durangobill.com/PowerballOdds.html
-https://www.businessinsider.com/powerball-lottery-ticket-combinations-2016-1
+<p>Probability of getting a red Power Ball number correct: 1/26 = .0384 = 38.4%</p>
+<p>Probability of getting a single white ball + a red ball:</p>
+<p> # of ways of 1 white ball matching 5 white balls: 5!/1!(5-1)! = 5</p>
+<p> # of ways of not matching the other 4 white balls: 64!/4!(64-1)! = 635,376</p>
+<p>635,376*5 = 3,176,880</p>
+<p>3,176,880/292,201,338 = .01087 or 1.087% chance</p>
+<p>Probalitiy grows much lower with every additional correct ball</p>
 <h1>Guaranteed Jackpot?</h1>
 <p>Using $2 tickets, $584,402,676 is required to buy each combination</p>
 <p>Highest PowerBall Jackpot: $1.586 billion</p>
-<h1>Is It Worth It?</h1>
-<p>Lottery pools may be used</p>
-<p>Viable only when large amount of tickets are bought</p>
+<p>It could be profitable, but hope that the jackpot isn't divided</p>
+<h1>Is It Worth buying a ticket?</h1>
+<p>The probaibilty of having 5 correct white balls and the correct powerball is 1/292,201,338 or 0.00000034222%</p>
+<p>If a line of baseballs (2.9in diameter) were lined up from Boston to Los Angeles(2,998.68 highway miles), it would take 65,515,988 baseballs</p>
+<p>The probability of driving along this line and picking up a "winner" baseball at random is 1/65,515,988 or 0.000001526%</p>
+<h2>You are 4.46x more likely to pick the "winner" baseball along the highway than winning a powerball jackpot!</h2>
 </div>
 </body>
 </html>
