--- a/page3.html
+++ b/page3.html
@@ -66,6 +66,7 @@
 <p>If a line of baseballs (2.9in diameter) were lined up from Boston to Los Angeles(2,998.68 highway miles), it would take 65,515,988 baseballs</p>
 <p>The probability of driving along this line and picking up a "winner" baseball at random is 1/65,515,988 or 0.000001526%</p>
 <h2>You are 4.46x more likely to pick the "winner" baseball along the highway than winning a powerball jackpot!</h2>
+<p>The PowerBall is a scam and a half.</p>
 </div>
 </body>
 </html>
