--- a/page3.html
+++ b/page3.html
@@ -58,13 +58,13 @@
 <p>3,176,880/292,201,338 = .01087 or 1.087% chance</p>
 <p>Probability grows much lower with every additional correct ball</p>
 <h1>Guaranteed Jackpot?</h1>
-<p>Using $2 tickets, $584,402,676 is required to buy each combination</p>
+<p>Using $2 tickets, $584,402,676 is required to buy each combination.</p>
 <p>Highest PowerBall Jackpot: $1.586 billion</p>
-<p>It could be profitable, but hope that the jackpot isn't divided</p>
+<p>It could be profitable, but hope that the jackpot isn't divided among other players.</p>
 <h1>Is It Worth buying a ticket?</h1>
-<p>The probaibilty of having 5 correct white balls and the correct powerball is 1/292,201,338 or 0.00000034222%</p>
-<p>If a line of baseballs (2.9in diameter) were lined up from Boston to Los Angeles(2,998.68 highway miles), it would take 65,515,988 baseballs</p>
-<p>The probability of driving along this line and picking up a "winner" baseball at random is 1/65,515,988 or 0.000001526%</p>
+<p>The probaibilty of having 5 correct white balls and the correct powerball is 1/292,201,338 or 0.00000034222%.</p>
+<p>If a line of baseballs (2.9in diameter) were lined up from Boston to Los Angeles(2,998.68 highway miles), it would take 65,515,988 baseballs.</p>
+<p>The probability of driving along this line and picking up a "winner" baseball at random is 1/65,515,988 or 0.000001526%.</p>
 <h2>You are 4.46x more likely to pick the "winner" baseball along the highway than winning a powerball jackpot!</h2>
 <p>The PowerBall is a scam and a half.</p>
 </div>
