--- a/page3.html
+++ b/page3.html
@@ -52,10 +52,11 @@
 <h2>Multiplied by 26 Red Ball combinations, there are 292,201,338 possible combinations!</h2>
 <p>Probability of getting a red Power Ball number correct: 1/26 = .0384 = 38.4%</p>
 <p>Probability of getting a single white ball + a red ball:</p>
+<p>&nbsp;<span class="frac"><sup>5!</sup><span>&frasl;</span><sub>1!(5-1)!</sub></span></p>
 <p> # of ways of 1 white ball matching 5 white balls: 5!/1!(5-1)! = 5</p>
 <p> # of ways of not matching the other 4 white balls: 64!/4!(64-1)! = 635,376</p>
 <p>635,376*5 = 3,176,880</p>
-<p>3,176,880/292,201,338 = .01087 or 1.087% chance</p>
+<p>3,176,880/292,201,338 = .01087 or 1.087% chance to win $4</p>
 <p>Probability grows much lower with every additional correct ball</p>
 <h1>Guaranteed Jackpot?</h1>
 <p>Using $2 tickets, $584,402,676 is required to buy each combination.</p>
