--- a/page3.html
+++ b/page3.html
@@ -57,7 +57,7 @@
 <p> # of ways of not matching the other 4 white balls: 64!/4!(64-1)! = 635,376</p>
 <p>635,376*5 = 3,176,880</p>
 <p>3,176,880/292,201,338 = .01087 or 1.087% chance to win $4</p>
-<p>Probability grows much lower with every additional correct ball</p>
+<p>Probability grows much lower with every additional correct white ball</p>
 <h1>Guaranteed Jackpot?</h1>
 <p>Using $2 tickets, $584,402,676 is required to buy each combination.</p>
 <p>Highest PowerBall Jackpot: $1.586 billion</p>
