--- a/page-2.html
+++ b/page-2.html
@@ -52,6 +52,7 @@
     <p>                                      = Prob(E<sub>2</sub>) * Prob(E<sub>1</sub>|E<sub>2</sub>)</p>
   <p>Used when the events are not independent.</p>
 <h2><font color="red">Complement</font></h2>
+    <p>Prob(E') = 1 - Prob(E)</p>
 <h2><font color="red">Binomial Distribution</font></h2>
 <h2><font color="red">Binary Search</font></h2>
 </div>
