--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
           <a href="page3.html">PowerBall</a>
         </div>
     </div>
+    <div id="play">
     <p>POWER PLAY: <script src="/js/powerPlayGen.js"></script></p>
+  </div>
     <div id="powerNumbers">
         A. <script src="/js/powerNumGenerator.js"></script>
         <br>
