--- a/examples.html
+++ b/examples.html
@@ -32,10 +32,9 @@
     </div>
 <h1>Examples:</h1>
 <img src="\pictures\Image 12-4-19 at 3.04 PM.jpg" alt="Example1" class="examples">
-    <div id="background">
-    <div id="numbers">
+<br>
 <img src="\pictures\Image 12-4-19 at 3.06 PM.jpg" alt="Example1" class="examples">
-    <div id="background">
-    <div id="numbers">
+<br>
+</div>
 </body>
 </html>
