--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
     </div>
     <div id="play">
-    <p>POWER PLAY: <script src="/js/powerPlayGen.js"></script></p>
+    POWER PLAY: <script src="/js/powerPlayGen.js"></script>
   </div>
     <div id="powerNumbers">
         A. <script src="/js/powerNumGenerator.js"></script>
@@ -37,7 +37,7 @@
     </div>
   <h1>What is Probability?</h1>
 <p>The likelihood of an event happening.</p>
-<p>Prob(E)&nbsp;<span class="frac"><sup>|E|</sup><span>&frasl;</span><sub>|S|</sub></span></p>
+<p>Prob(E)=&nbsp;<span class="frac"><sup>|E|</sup><span>&frasl;</span><sub>|S|</sub></span></p>
      <div id="dash">
     <script src="/js/dashGenerator.js"></script>
     </div>
